Added React front-end

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "rm -rf out && mkdir out && tsc",
     "start": "cd out && node server.js",
     "watch": "npm run build && tsc-watch --onSuccess \"npm run start\"",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --rootDir=src"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --rootDir=src",
+    "build:deploy": "rm -rf out && mkdir out && tsc && (cd front && npm run build)"
   },
   "type": "module",
   "dependencies": {
