--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "type": "module",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
+    "argon2": "^0.30.3",
     "express": "^4.18.2",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
