--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@material-ui/styles": "^4.11.5",
     "argon2": "^0.30.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^6.0.1",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4"
   },
